MDEV-33957 UPDATE fails on replica replicating blob virtual column in 	   NOBLOB mode when replica logging is off

The sequence that causes the issue:

1. file->row_logging is false because slave-bin was not open;
2. TABLE::mark_columns_per_binlog_row_image() didn't mark column for
   read because file->row_logginbg is false. This was implemented in
   e53ad95b733 (MDEV-6877);
3. TABLE::update_virtual_fields() didn't update virtual field value
   because column is not marked for read;
4. calc_row_difference() sees o_len as UNIV_SQL_NULL, but new row
   value is "1". The virtual column is added to update vector;
5. row_upd() tries to update secondary index, but row_upd_sec_step()
   doesn't see old value in the index.

The patch does mark_virtual_column_with_deps() in case of rgi_slave in
mark_columns_per_binlog_row_image() so that non-stored virtual columns
are marked for update in slave thread.